--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -12,13 +12,8 @@ body {
   max-width: 375px;
   margin: auto;
   background-color: $background-primary;
-}
-
-%action-icons {
-  width: 24px;
-  height: auto;
-  cursor: pointer;
-  margin: 0 15px;
+  height: 100vw;
+  position: relative;
 }
 
 .tab-bar {
