--- a/styles/scss/pages/search.scss
+++ b/styles/scss/pages/search.scss
@@ -83,6 +83,7 @@
             font-size: 14px;
             font-weight: 600;
             letter-spacing: 1px;
+            color: $text-color;
         }
     }
 }
