--- a/styles/scss/pages/search.scss
+++ b/styles/scss/pages/search.scss
@@ -41,6 +41,7 @@
     margin: 9px 0 7px;
     width: 100%;
     position: sticky;
+    top: 0;
     overflow-x: auto;
     background-color: $background-primary;
     
