--- a/styles/scss/pages/likes.scss
+++ b/styles/scss/pages/likes.scss
@@ -13,7 +13,7 @@
         text-align: center;
         font-size: 16px;
         font-weight: 600;
-        color: #00000040;
+        color: $text-color-faded;
         padding: 12px 0;
     }
     
@@ -49,9 +49,102 @@ main {
             padding: 13px 0;
         }
 
-        .like-new {
-            @include simple-flex(flex-start, center, row);
-            padding: 8px 0;
+        .like-news {
+        
+            @at-root main .like-new {
+                @include simple-flex(flex-start, center, row);
+                padding: 8px 0;
+                
+                .like-author-container {
+                    position: relative;
+                    width: 44px;
+                    
+                    .like-author {
+                        @include box-round(44px);
+                    }
+
+                    .multiple-authors {
+                        @include box-round(32px);
+
+                        &:last-child {
+                            position: absolute;
+                            top: 12px;
+                            left: 12px;
+                            border: 1px solid #FFFFFF;
+                        }
+                    }
+                }
+                
+
+                .like-message {
+                    font-size: 13px;
+                    font-weight: 400;
+                    letter-spacing: -0.07px;
+                    color: $text-color;
+                    padding-left: 12px;
+                    max-width: 185px;
+                    
+                    .author-name {
+                        font-weight: 600;
+                    }
+                    
+                    .time {
+                        color: $text-color-faded;
+                    }
+
+                    .user-link {
+                        color: #154574;
+                    }
+                }
+
+                .liked-img {
+                    width: 44px;
+                    height: auto;
+                    object-fit: cover;
+                    margin-left: auto;
+                }
+
+                .message-box {
+                    @extend .liked-img;
+                    width: initial;
+                    font-size: 14px;
+                    font-weight: 600;
+                    padding: 6px 14px;
+                    border: 1px solid #3C3C4318;
+                    border-radius: 4px;
+                    min-width: 90px;
+                    min-height: 28px;
+                    box-sizing: border-box;
+                    text-align: center;
+                }
+
+                .follow-box {
+                    @extend .message-box;
+                    background-color: $highlight-color;
+                    color: #fff;
+                }
+            }
+
+            .reaction {
+                @include simple-flex(flex-start, center, row);
+                padding: 5px 0 13px 56px;
+                
+                .like-icon {
+                    width: 12px;
+                    height: 10px;
+                }
+
+                p {
+                    font-size: 13px;
+                    color: $text-color-faded;
+                    font-weight: 600;
+                    padding-left: 14px;
+                }
+            }
         }
     }
+}
+
+#like-icon {
+    fill: $text-color;
 }
