--- a/styles/scss/variables.scss
+++ b/styles/scss/variables.scss
@@ -2,4 +2,5 @@ $background-primary: #fafafa;
 $background-secondary: #f2f2f2;
 
 $text-color: #262626;
+$text-color-faded: #00000040;
 $highlight-color: #3797ef;
