feature(user info): html and scss done

--- a/styles/scss/mixins.scss
+++ b/styles/scss/mixins.scss
@@ -10,3 +10,9 @@
   height: $size;
   border-radius: 50%;
 }
+
+@mixin text-format($size: 13px, $weight: 400, $color: $text-color) {
+  font-size: $size;
+  font-weight: $weight;
+  color: $color;
+}
