--- a/styles/scss/pages/likes.scss
+++ b/styles/scss/pages/likes.scss
@@ -93,7 +93,7 @@ main {
                     }
 
                     .user-link {
-                        color: #154574;
+                        color: $user-link-color;
                     }
                 }
 
