--- a/styles/css/pages/home.css
+++ b/styles/css/pages/home.css
@@ -45,6 +45,51 @@ body {
   width: 22px;
 }
 
+.stories-container {
+  display: flex;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: auto;
+  padding: 9px 0 8px;
+  /* Track */
+  /* Handle */
+}
+.stories-container::-webkit-scrollbar {
+  height: 6px;
+  display: none;
+}
+.stories-container::-webkit-scrollbar-track {
+  background-color: #f2f2f2;
+}
+.stories-container::-webkit-scrollbar-thumb {
+  background: #c7c7c7;
+  border-radius: 5px;
+}
+.stories-container .story-item {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+}
+.stories-container .story-item .story-img {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-size: cover;
+  border: 2px solid #fff;
+}
+.stories-container .story-item .story-author {
+  color: #262626;
+  font-size: 12px;
+  font-family: Arial;
+  text-align: center;
+  margin-top: 5px;
+}
+@media screen and (min-width: 768px) {
+  .stories-container::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -68,34 +113,14 @@ main {
   align-items: center;
   flex-direction: column;
 }
-main .stories-container {
-  display: flex;
-  width: 100%;
-  max-width: 100vw;
-  overflow-x: auto;
-  padding: 9px 0 8px;
-  /* Track */
-  /* Handle */
-}
-main .stories-container::-webkit-scrollbar {
-  height: 6px;
-  display: none;
-}
-main .stories-container::-webkit-scrollbar-track {
-  background-color: #f2f2f2;
-}
-main .stories-container::-webkit-scrollbar-thumb {
-  background: #c7c7c7;
-  border-radius: 5px;
-}
-main .stories-container .story-item {
+main .story-item {
   display: flex;
   flex-direction: column;
   padding: 0 10px;
 }
-main .stories-container .story-item .image-border {
-  width: 62px;
-  height: 62px;
+main .story-item .image-border {
+  width: 63px;
+  height: 63px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
@@ -104,17 +129,10 @@ main .stories-container .story-item .image-border {
   background: linear-gradient(215deg, #833ab4, #fd1d1d, #fcb045);
   position: relative;
 }
-main .stories-container .story-item .image-border.live {
+main .story-item .image-border.live {
   background: linear-gradient(125deg, #833ab4, #de063f);
 }
-main .stories-container .story-item .image-border .story-img {
-  border-radius: 50%;
-  background-size: cover;
-  width: calc(100% - 15%);
-  height: calc(100% - 15%);
-  border: 2.4px solid #fff;
-}
-main .stories-container .story-item .image-border .live-alert {
+main .story-item .live-alert {
   position: absolute;
   bottom: -5px;
   font-size: 8px;
@@ -124,18 +142,6 @@ main .stories-container .story-item .image-border .live-alert {
   border-radius: 3px;
   border: 2px solid #fefefe;
   letter-spacing: 1px;
-}
-main .stories-container .story-item .story-author {
-  color: #262626;
-  font-size: 12px;
-  font-family: Arial;
-  text-align: center;
-  margin-top: 5px;
-}
-@media screen and (min-width: 768px) {
-  main .stories-container::-webkit-scrollbar {
-    display: none;
-  }
 }
 main .feed-container {
   display: flex;
