--- a/styles/css/pages/likes.css
+++ b/styles/css/pages/likes.css
@@ -45,6 +45,51 @@ body {
   width: 22px;
 }
 
+.stories-container {
+  display: flex;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: auto;
+  padding: 9px 0 8px;
+  /* Track */
+  /* Handle */
+}
+.stories-container::-webkit-scrollbar {
+  height: 6px;
+  display: none;
+}
+.stories-container::-webkit-scrollbar-track {
+  background-color: #f2f2f2;
+}
+.stories-container::-webkit-scrollbar-thumb {
+  background: #c7c7c7;
+  border-radius: 5px;
+}
+.stories-container .story-item {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+}
+.stories-container .story-item .story-img {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-size: cover;
+  border: 2px solid #fff;
+}
+.stories-container .story-item .story-author {
+  color: #262626;
+  font-size: 12px;
+  font-family: Arial;
+  text-align: center;
+  margin-top: 5px;
+}
+@media screen and (min-width: 768px) {
+  .stories-container::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .section-container {
   position: sticky;
   width: 100%;
@@ -132,7 +177,7 @@ main .like-new .like-message .time {
   color: #00000040;
 }
 main .like-new .like-message .user-link {
-  color: #154574;
+  color: #234f7c;
 }
 main .like-new .liked-img, main .like-new .message-box, main .like-new .follow-box {
   width: 44px;
