--- a/styles/css/pages/profile.css
+++ b/styles/css/pages/profile.css
@@ -45,6 +45,54 @@ body {
   width: 22px;
 }
 
+.stories-container {
+  display: flex;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: auto;
+  padding: 9px 0 8px;
+  /* Track */
+  /* Handle */
+}
+.stories-container::-webkit-scrollbar {
+  height: 6px;
+  display: none;
+}
+.stories-container::-webkit-scrollbar-track {
+  background-color: #f2f2f2;
+}
+.stories-container::-webkit-scrollbar-thumb {
+  background: #c7c7c7;
+  border-radius: 5px;
+}
+.stories-container .story-item {
+  display: flex;
+  flex-direction: column;
+  padding: 0 10px;
+}
+.stories-container .story-item .story-img {
+  width: 56px;
+  height: 56px;
+  border-radius: 50%;
+  background-size: cover;
+  border: 2px solid #fff;
+}
+.stories-container .story-item .story-author {
+  color: #262626;
+  font-size: 12px;
+  font-family: Arial;
+  text-align: center;
+  margin-top: 5px;
+}
+@media screen and (min-width: 768px) {
+  .stories-container::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+.user-info {
+  padding: 0 11px;
+}
 .user-info .account-alt .user {
   display: flex;
   justify-content: center;
@@ -64,6 +112,76 @@ body {
   padding: 0 6px;
   font-size: 16px;
   font-weight: 600;
+}
+.user-info .user-stats {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding-bottom: 12px;
+}
+.user-info .user-stats .user-icon {
+  width: 86px;
+  height: 86px;
+  border-radius: 50%;
+  padding: 4px;
+  border: 1px solid #C7C7CC;
+}
+.user-info .user-stats > * {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.user-info .user-stats p {
+  font-size: 13px;
+  font-weight: 400;
+  color: #262626;
+}
+.user-info .user-stats .stats {
+  font-size: 16px;
+  font-weight: 600;
+  color: #262626;
+}
+.user-info .description {
+  padding-bottom: 15px;
+}
+.user-info .description p {
+  font-size: 12px;
+  font-weight: 400;
+  color: #262626;
+}
+.user-info .description .user-name {
+  font-size: 12px;
+  font-weight: 600;
+  color: #262626;
+}
+.user-info .description .user-link {
+  color: #234f7c;
+}
+.user-info .edit {
+  width: 100%;
+  padding: 6px 0;
+  margin-bottom: 16px;
+  background-color: #fff;
+  border: 1px solid #00000040;
+  border-radius: 6px;
+}
+.user-info .edit .buttom-text {
+  font-size: 13px;
+  font-weight: 600;
+  color: #262626;
+  text-align: center;
+  letter-spacing: -0.1px;
+}
+.user-info .stories-container .story-img {
+  padding: 3px;
+  border: 1px solid #C7C7CC;
+}
+.user-info .stories-container .story-img.new {
+  width: 18px;
+  height: 18px;
+  padding: 23px;
 }
 
 /*# sourceMappingURL=profile.css.map */
