--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -30,3 +30,54 @@ body {
     width: 22px;
   }
 }
+
+
+.stories-container {
+  display: flex;
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: auto;
+  padding: 9px 0 8px;
+
+  &::-webkit-scrollbar {
+    height: 6px;
+    display: none;
+  }
+
+  /* Track */
+  &::-webkit-scrollbar-track {
+    background-color: $background-secondary;
+  }
+
+  /* Handle */
+  &::-webkit-scrollbar-thumb {
+    background: #c7c7c7;
+    border-radius: 5px;
+  }
+
+  .story-item {
+    display: flex;
+    flex-direction: column;
+    padding: 0 10px;
+
+    .story-img {
+      @include box-round(56px);
+      background-size: cover;
+      border: 2px solid #fff;
+    }
+
+    .story-author {
+      color: $text-color;
+      font-size: 12px;
+      font-family: Arial;
+      text-align: center;
+      margin-top: 5px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    &::-webkit-scrollbar {
+      display: none;
+    }
+  }
+}
