--- a/styles/scss/variables.scss
+++ b/styles/scss/variables.scss
@@ -3,4 +3,7 @@ $background-secondary: #f2f2f2;
 
 $text-color: #262626;
 $text-color-faded: #00000040;
+$user-link-color: #234f7c;
 $highlight-color: #3797ef;
+
+$border-color: #C7C7CC;
