--- a/styles/scss/variables.scss
+++ b/styles/scss/variables.scss
@@ -7,3 +7,6 @@ $user-link-color: #234f7c;
 $highlight-color: #3797ef;
 
 $border-color: #C7C7CC;
+$shadow-color: #A6A6AA;
+
+$side-menu-size: 251px;
