--- a/styles/scss/pages/profile.scss
+++ b/styles/scss/pages/profile.scss
@@ -10,18 +10,25 @@
     &:checked ~ .side-menu {
         transform: translateX(-$side-menu-size);
         visibility: visible;
+
+        .toggle-side-menu {
+            left: -39px;
+        }
     }
 
 }
 
 .side-menu {
-    position: absolute;
-    left: 100%;
+    position: fixed;
+    top: 0;
+    left: calc(50% + 375px/2);
     height: 100%;
     width: $side-menu-size;
     background-color: #fff;
     visibility: hidden;
     box-shadow: -0.5px 0 0 0 $shadow-color;
+    z-index: 1;
+    transform: translateX(0);
 
     .toggle {
         position: relative;
@@ -34,7 +41,6 @@
             top: 12px;
             width: 21px;
             height: 18px;
-            z-index: 3;
             visibility: visible;
         }
     }
