--- a/styles/css/extends.css
+++ b/styles/css/extends.css
@@ -1,3 +1,17 @@
+/* Error: Undefined variable.
+ *   ,
+ * 9 |   fill: $text-color;
+ *   |         ^^^^^^^^^^^
+ *   '
+ *   styles\scss\extends.scss 9:9  root stylesheet */
 
-
-/*# sourceMappingURL=extends.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a   \2577 \a 9 \2502    fill: $text-color;\d\a   \2502          ^^^^^^^^^^^\a   \2575 \a   styles\\scss\\extends.scss 9:9  root stylesheet";
+}
