--- a/styles/css/pages/home.css
+++ b/styles/css/pages/home.css
@@ -16,6 +16,11 @@ header .action-icon, .tab-bar .action-icon {
   margin: 0 15px;
 }
 
+#home-icon {
+  fill: #262626;
+  fill-opacity: 1;
+}
+
 *,
 p {
   font-family: Arial;
@@ -40,6 +45,9 @@ body {
   bottom: 0;
   padding: 10px 0;
   border-top: 1px solid #e2e2e2;
+  fill-opacity: 0;
+  stroke-width: 1.5px;
+  stroke: #262626;
 }
 .tab-bar .action-icon {
   width: 22px;
@@ -47,7 +55,6 @@ body {
 
 .stories-container {
   display: flex;
-  width: 100%;
   max-width: 100vw;
   overflow-x: auto;
   padding: 9px 0 8px;
@@ -229,10 +236,6 @@ main .feed-container .card-post .post-infos .post-caption {
 }
 main .feed-container .card-post .post-infos .post-caption .author-name {
   font-weight: 600;
-}
-
-#home-icon path {
-  fill: #262626;
 }
 
 /*# sourceMappingURL=home.css.map */
