--- a/styles/css/pages/likes.css
+++ b/styles/css/pages/likes.css
@@ -16,6 +16,11 @@ html {
   margin: 0 15px;
 }
 
+#like-icon {
+  fill: #262626;
+  fill-opacity: 1;
+}
+
 *,
 p {
   font-family: Arial;
@@ -40,6 +45,9 @@ body {
   bottom: 0;
   padding: 10px 0;
   border-top: 1px solid #e2e2e2;
+  fill-opacity: 0;
+  stroke-width: 1.5px;
+  stroke: #262626;
 }
 .tab-bar .action-icon {
   width: 22px;
@@ -47,7 +55,6 @@ body {
 
 .stories-container {
   display: flex;
-  width: 100%;
   max-width: 100vw;
   overflow-x: auto;
   padding: 9px 0 8px;
@@ -218,10 +225,6 @@ main .time-section .like-news .reaction p {
   color: #00000040;
   font-weight: 600;
   padding-left: 14px;
-}
-
-#like-icon {
-  fill: #262626;
 }
 
 /*# sourceMappingURL=likes.css.map */
