--- a/styles/css/pages/profile.css
+++ b/styles/css/pages/profile.css
@@ -40,6 +40,9 @@ body {
   bottom: 0;
   padding: 10px 0;
   border-top: 1px solid #e2e2e2;
+  fill-opacity: 0;
+  stroke-width: 1.5px;
+  stroke: #262626;
 }
 .tab-bar .action-icon {
   width: 22px;
@@ -47,7 +50,6 @@ body {
 
 .stories-container {
   display: flex;
-  width: 100%;
   max-width: 100vw;
   overflow-x: auto;
   padding: 9px 0 8px;
@@ -134,28 +136,35 @@ main {
   overflow: hidden;
 }
 
-.user-info {
-  padding: 0 11px;
+.account-alt {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  background-color: #fafafa;
 }
-.user-info .account-alt .user {
+.account-alt .user {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: row;
   padding: 12px 0;
 }
-.user-info .account-alt .user .lock-icon {
+.account-alt .user .lock-icon {
   width: 9px;
   height: 12px;
 }
-.user-info .account-alt .user .arrow-icon {
+.account-alt .user .arrow-icon {
   width: 11px;
   height: 6px;
 }
-.user-info .account-alt .user p {
+.account-alt .user p {
   padding: 0 6px;
   font-size: 16px;
   font-weight: 600;
+}
+
+.user-info {
+  padding: 0 11px;
 }
 .user-info .user-stats {
   display: flex;
@@ -229,12 +238,17 @@ main {
 }
 
 .menu-alt {
-  box-shadow: 0 -0.5px 0px 0px #A6A6AA;
-  width: 100%;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 42.5px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   flex-direction: row;
+  width: 100%;
+  background-color: #fafafa;
+  box-shadow: 0 -0.5px 0px 0px #A6A6AA;
+  margin-top: 0.5px;
 }
 .menu-alt .menu-container {
   display: flex;
