--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -40,6 +40,9 @@ body {
   bottom: 0;
   padding: 10px 0;
   border-top: 1px solid #e2e2e2;
+  fill-opacity: 0;
+  stroke-width: 1.5px;
+  stroke: #262626;
 }
 .tab-bar .action-icon {
   width: 22px;
@@ -47,7 +50,6 @@ body {
 
 .stories-container {
   display: flex;
-  width: 100%;
   max-width: 100vw;
   overflow-x: auto;
   padding: 9px 0 8px;
