--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -24,6 +24,9 @@ body {
   bottom: 0;
   padding: 10px 0;
   border-top: 1px solid #e2e2e2;
+  fill-opacity: 0;
+  stroke-width: 1.5px;
+  stroke: $text-color;
 
   .action-icon {
     @extend %action-icons;
@@ -34,7 +37,7 @@ body {
 
 .stories-container {
   display: flex;
-  width: 100%;
+  // width: 100%;
   max-width: 100vw;
   overflow-x: auto;
   padding: 9px 0 8px;
