pre-merge breno

--- a/styles/scss/pages/profile.scss
+++ b/styles/scss/pages/profile.scss
@@ -19,7 +19,7 @@
 }
 
 .side-menu {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: calc(50% + 375px/2);
     height: 100%;
@@ -49,6 +49,7 @@
 
 main {
     overflow: hidden;
+    position: relative;
 }
 
 .account-alt {
