--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -37,7 +37,7 @@ body {
 
 .stories-container {
   display: flex;
-  // width: 100%;
+  width: 100%;
   max-width: 100vw;
   overflow-x: auto;
   padding: 9px 0 8px;
