--- a/styles/css/pages/profile.css
+++ b/styles/css/pages/profile.css
@@ -23,7 +23,7 @@ p {
 
 body {
   background-color: #fafafa;
-  height: 100vw;
+  height: 100%;
   position: relative;
 }
 
@@ -103,37 +103,51 @@ body {
   transform: translateX(-251px);
 }
 #toggle:checked ~ .side-menu {
-  transform: translateX(-251px);
-  visibility: visible;
-}
-#toggle:checked ~ .side-menu .toggle-side-menu {
-  left: -39px;
+  display: initial;
 }
 
 .side-menu {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: calc(50% + 375px/2);
+  right: 0;
   height: 100%;
   width: 251px;
   background-color: #fff;
-  visibility: hidden;
   box-shadow: -0.5px 0 0 0 #A6A6AA;
   z-index: 1;
   transform: translateX(0);
+  display: none;
+  padding: 18px 16px;
+  box-sizing: border-box;
 }
-.side-menu .toggle {
-  position: relative;
-  top: 0;
-  left: 0;
+.side-menu .user-name, .side-menu .menu-options .menu-option {
+  font-size: 15px;
+  font-weight: 400;
+  color: #262626;
+  margin-bottom: 13px;
 }
-.side-menu .toggle-side-menu {
-  position: absolute;
-  left: -18px;
-  top: 12px;
-  width: 21px;
-  height: 18px;
-  visibility: visible;
+.side-menu .menu-options {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  flex-direction: column;
+  height: 100%;
+}
+.side-menu .menu-options .menu-option {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+  margin-top: 13px;
+}
+.side-menu .menu-options .menu-option img {
+  width: 23px;
+  height: auto;
+  margin-right: 13px;
+}
+.side-menu .menu-options .menu-option:last-child {
+  margin-top: auto;
+  margin-bottom: 24px;
 }
 
 main {
@@ -166,6 +180,11 @@ main {
   padding: 0 6px;
   font-size: 16px;
   font-weight: 600;
+}
+.account-alt .toggle-side-menu {
+  position: absolute;
+  right: 18px;
+  top: 12px;
 }
 
 .user-info {
@@ -209,7 +228,7 @@ main {
   font-weight: 400;
   color: #262626;
 }
-.user-info .description .user-name {
+.user-info .description .user-name, .user-info .description .side-menu .menu-options .menu-option, .side-menu .menu-options .user-info .description .menu-option {
   font-size: 12px;
   font-weight: 600;
   color: #262626;
